<resources>
    <string name="app_name">Morpling Weather</string>
    <string name="no_data">No data</string>
    <string name="temp_placeholder">%d C</string>
    <string name="precip_placeholder">%d %%</string>
    <string name="tempLable">Temperature</string>
    <string name="ProbPrecip">Precipitation</string>
    <string name="climaDiario">Daily Weather</string>
    <string name="ClimaxHora">Hourly Weather</string>
    <string name="language">en</string>
    <string name="units">si</string>
    <string name="network_error">Network error</string>
    <string name="retry">retry?</string>
    <string name="daily_weather_text">Daily Weather</string>
    <string name="summary_Txt">Summary of the week</string>

</resources>
